--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -239,7 +239,7 @@ services:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 5s
       timeout: 5s
-      retries: 3telemetry
+      retries: 3
     volumes:
       - $PWD/loki/local-config.yaml:/etc/loki/local-config.yaml:ro
     deploy:
